# ludo

./: .gitignore  CMakeLists.txt  README.md
src/: class.lua  config.lua  engine.lua  input.lua
test/: class_spec.lua
